{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player Movements",
            "id": "60d6592e-70e2-41aa-b59e-0a895d398e62",
            "actions": [
                {
                    "name": "Movements",
                    "type": "PassThrough",
                    "id": "89b7c906-a02a-499f-b253-411e0eac8073",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Running",
                    "type": "Button",
                    "id": "3f7f092f-05f0-4fcf-804e-1480ef541e03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "4e96bc38-9199-426a-ba65-2e1502a1a8a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "fe712c5a-02ab-4be0-b70f-2542ec8dd632",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movements",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3a202e03-ce37-455c-8e1b-171eef4592fd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "590633c1-638a-4d0a-82a7-5ade6644a27e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b7685282-2535-434f-9795-87cf7589115d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "32117b89-7aaa-463a-a97f-68d6444b6f16",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c0e65406-37c7-4e6e-ab85-9ffb0131a930",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d02010d2-766f-4f0f-9a9d-50640faf860d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": []
        }
    ]
}